methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:16: error: Boolean does not take parameters
  return bBaggle();
                ^