methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var bBaggle = false;
  
  var counter = 0;
  
  for(i <- 0 to 6) {
    if(isOverBaggle()) {
      bBaggle = true;
    }
  }
  
  for(i <- 0 to 6) {
    backward();
  }
  
  return bBaggle();
}